# autonavx_ardrone

./: LICENSE  README.md
ardrone_autonomy/: manifest.xml
ardrone_joystick/: CMakeLists.txt  manifest.xml  package.xml
ardrone_joystick/src/: main.cpp
ardrone_python/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ardrone_python/src/: example1_odometry.py  example2_takeoff_and_land.py  example3_trajectory.py  example4_combined.py  simple.py  simple.py~
ccny_vision/artoolkit/include/AR/: config.h  config.h.in  v4l-config.h
ccny_vision/artoolkit/include/AR/sys/: videoGStreamer.h  videoLinux1394Cam.h  videoLinuxV4L.h
tum_ardrone/: manifest.xml
tum_ardrone/doku/: tum_ardrone - ROS Wiki.html  tum_ardrone_drone_autopilot - ROS Wiki.html  tum_ardrone_drone_gui - ROS Wiki.html  tum_ardrone_drone_stateestimation - ROS Wiki.html
tum_ardrone/doku/tum_ardrone - ROS Wiki_files/: common.css  eznMokFQmpchlen_USfs1hd1.swf  seesaw.js
tum_ardrone/doku/tum_ardrone_drone_autopilot - ROS Wiki_files/: rosversion.js
tum_ardrone/doku/tum_ardrone_drone_gui - ROS Wiki_files/: RGraph_002.js  screen.css
tum_ardrone/doku/tum_ardrone_drone_stateestimation - ROS Wiki_files/: ASCIIMathML.js
